[project]
name = "graph-img-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.0",
    "manim>=0.18.1",
    "networkx>=3.6.1",
    "numpy<2",
    "scipy>=1.17.1",
    "torch<=2.2.2",
    "torch-geometric>=2.7.0",
]
